# tts-agent-harness

./: .env.dev  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TODO.md  prototype-chunk-pipeline.html  run.sh  spec.md  start.cmd  start.ps1  test.sh
.harness/: config.json  rules.md
.omx/: metrics.json  mimo-main.js  mimo-tts-doc.js
.omx/logs/: tmux-hook-2026-04-23.jsonl  tmux-hook-2026-04-24.jsonl  turns-2026-04-23.jsonl  turns-2026-04-24.jsonl
.omx/state/: hud-state.json  notify-hook-state.json  tmux-hook-state.json
docs/: 002-config-design.md  003-user-stories.md  006-e2e-plan.md  015-error-handling-design.md  017-llm-agent-design.md  README.md  deployment.md  p3-workers.md  product.md  tts-config.md  user-stories.md
docs/_archive/: 002-rewrite-plan.md  010-repair-test-design.md
docs/worklogs/: A10-frontend.md  A2-domain.md  A3-whisperx.md  W1-W2-gate.md
scripts/: events.js  events.py  p1-chunk.js  p2-synth.js  p3-recommend-workers.js  p3-transcribe.py  p5-subtitles.js  p6-concat.js  precheck.js  start-p3-server.sh  stop-p3-server.sh
server/: pyproject.toml
server/api/: errors.py
server/core/: __init__.py  cleanup.py  domain.py  events.py  models.py  p1_logic.py  p2v_scoring.py  p5_logic.py  repositories.py  script_import.py  storage.py  tts_provider.py  xiaomi_mimo_client.py
test/: run-unit.sh
web/: components.json  package.json  pnpm-lock.yaml  vitest.config.ts
whisperx-svc/: Dockerfile  Dockerfile.gpu  README.md  pyproject.toml  server.py
whisperx-svc/tests/: conftest.py  test_health.py  test_transcribe_smoke.py
(+71 files in other folders)
