[project]
name = "whisperx-svc"
version = "0.1.0"
description = "WhisperX HTTP service for TTS Agent Harness P3 stage (ADR-001 §4.8)"
requires-python = ">=3.12,<3.13"
readme = "README.md"

dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn[standard]>=0.30,<0.32",
  "python-multipart>=0.0.9",
  "pydantic>=2.7,<3",
  "whisperx>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
